<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cycle_nodes_pkg</name>
  <version>0.0.1</version>
  <description>Node cycle base demo</description>
  <maintainer email="xiangyinghao@buaa.edu.cn">Yinghao Xiang</maintainer>
  <license>MIT license</license>

  <depend>rclpy</depend>

  <exec_depend>more_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
